--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -11,7 +11,7 @@
 %% version 1999/12/01 or later.
 %% 
 %% The list of all files belonging to the 'Elsarticle Bundle' is
- %% given in the file `manifest.txt'.
+%% given in the file `manifest.txt'.
 %% 
 %% Template article for Elsevier's document class `elsarticle'
 %% with harvard style bibliographic references
@@ -185,12 +185,12 @@ operational planning problems.
 \begin{keyword}
 %% keywords here, in the form: keyword \sep keyword
 Large Neighborhood Search
-\sep Actor Framework
-\sep Maintenance scheduling
-\sep Real-time Optimization
-\sep Human-centered Computing
-\sep Decision Support Systems
-\sep Interactive Optimization.
+\sep\ Actor Framework
+\sep\ Maintenance scheduling
+\sep\ Real-time Optimization
+\sep\ Human-centered Computing
+\sep\ Decision Support Systems
+\sep\ Interactive Optimization.
 
 %% PACS codes here, in the form: \PACS code \sep code
 
