--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -29,7 +29,7 @@ suggestions~\citep{meignan_review_2015}. Theses initial suggestions are then
 iterated on elsewhere in the scheduling process usually through much more manual
 means. In~\citep{barthelemy2002human} the authors argue that many problems that
 operation research aim to solve are often composed of a group of individuals
-whose decisions are consolidated into an "epistemic subject" for which a
+whose decisions are consolidated into an ``epistemic subject'' for which a
 mathematical model can be formulated and solved, with many scheduling problems
 being good examples. However, often multiple actors have different views on what
 constitutes an optimal schedule hence resulting in multiple-objectives. Even if
@@ -59,7 +59,7 @@ background knowledge will be required about the maintenance scheduling process.
 Figure~\ref{fig:integrated:maintenance-process} illustrates the general setup
 of a maintenance planning and scheduling system. The system's actors
 have the following responsibilities: the planner generates the work orders that
-are to be scheduled; each scheduler creates weekly schedules for a set of work orders ; 
+are to be scheduled; each scheduler creates weekly schedules for a set of work orders; 
 based on the weekly schedule the supervisors assign work order
 activities to technicians; the
 technicians executes the work. Each planning problem is matched 
@@ -67,7 +67,7 @@ by a corresponding optimization problem, for the scheduler, it is a variation of
 multi-compartment multi-knapsack problem, for the supervisor it is a variation of the 
 assignment problem and for the technicians it is a single machine scheduling problem.
 
-The idea of "ownership" of a work order is crucial, to understand the necessity of
+The idea of ``ownership'' of a work order is crucial, to understand the necessity of
 actor-based approaches. Throughout the scheduling process a
 work order is always owned by a specific actor and he alone is allow to modify/execute it. This
 means that a single model approach is very difficult to implement in practice
@@ -86,8 +86,8 @@ scheduling are handled by \textbf{dynamic rescheduling between the actors}.
 	\caption{Simple overview of the scheduling process with its primary types of
 		actors. The planner, the scheduler, the supervisor(s), and the technicians. 		
 		The green color highlights the scheduler as it the actor in the maintenance
-		scheduling process that is modelled in this paper.}
-	\label{fig:integrated:maintenance-process}
+		scheduling process that is modelled in this paper.
+	}\label{fig:integrated:maintenance-process}
 \end{figure}
 
 The main contribution of this article is to provide a
@@ -96,22 +96,22 @@ metaheuristic to support a business process composed from
 smaller mathematical models in a framework, instead of a
 larger integrated mathematical model.
 
-The paper is divided into four different sections. Section
-\ref{sec:2-solution-method} explains the weekly maintenance scheduling model
-in detail and forms the foundation of the paper.  Section \ref{sec:3-results}
-shows the results that come from the metaheuristic implemented, where it will
-be affected by the simulated user interaction. Section \ref{sec:4-discussion}
-will discuss the implications of the research and estabslish a future
-research direction. All source code for the implemented system can be found at
-\citep{scipo-code-ordinator_api}, instance data is confidential and cannot be
-shared publicly.
+The paper is divided into four different sections.
+Section~\ref{sec:2-solution-method} explains the weekly maintenance
+scheduling model in detail and forms the foundation of the paper. 
+Section~\ref{sec:3-results} shows the results that come from the metaheuristic
+implemented, where it will be affected by the simulated user interaction.
+Section~\ref{sec:4-discussion} will discuss the implications of the research
+and estabslish a future research direction. All source code for the implemented
+system can be found at \citep{scipo-code-ordinator_api}, instance data is
+confidential and cannot be shared publicly.
 
 \subsection{The Weekly (Period) Maintenance Scheduling Model}
 The weekly maintenance scheduling model for the problem is a variant of
-the  Multi-compartment Multi-knapsack Problem with capacity penalties MCMKP.
+the Multi-compartment Multi-knapsack Problem with capacity penalties MCMKP\@
 The notation used to describe the dynamical aspects in the model is based
-on the notation from the dynamic metaheuristics literature as found in
-\cite{yangMetaheuristicsDynamicCombinatorial2013}. % TODO: Is there a better
+on the notation from the dynamic metaheuristics literature as found 
+in~\citep{yangMetaheuristicsDynamicCombinatorial2013}. % TODO: Is there a better
 source on the dynamic notation. Here $\VarMetaTime$ is added as a time variable
 on all sets, parameters, and variables that are subject to change while the
 metaheuristic is running. This enables precise timing on the messages that
@@ -119,15 +119,15 @@ are send to the AbLNS and understand how it reacts in real-time. A company
 performing maintenance usually creates weekly maintenance plans for the
 next $\ElementPeriod \in \SetPeriod$ period. The weekly schedule is created
 centrally and consists of scheduling the $\ElementWorkOrder \in \SetWorkOrder$
-work orders, i.e. maintenance tasks, such that all $\ElementWorkOrder$
+work orders, i.e.\ maintenance tasks, such that all $\ElementWorkOrder$
 are scheduled into a specific period $\ElementPeriod$. Each work order $
 \ElementWorkOrder$ requires some resources $\ElementResource \in \SetResource$
-to be carried out, e.g. man-power with different qualifications. Each of these
+to be carried out, e.g.\ man-power with different qualifications. Each of these
 resources are available in limited amounts given by $\ParStrategicResource$.
 To correct for possible manual interventions that can make the problem
-infeasible a penalty ( $\ParStrategicResourcePenalty$) is introduced.
+infeasible a penalty ($\ParStrategicResourcePenalty$) is introduced.
 The urgency of the different maintenance work order ($\ElementWorkOrder$)
-varies and is reflected in a "tardiness" for carrying out a maintenance
+varies and is reflected in a `tardiness' for carrying out a maintenance
 work order in a certain period given by $\ParStrategicUrgency$. The $
 \ParStrategicUrgency$ also captures the tardiness of the individual work orders
 ($\ElementWorkOrder$), meaning that the value gained from scheduling work
@@ -151,26 +151,26 @@ happening in.
 The objective function~\eqref{eqn:objective:strategic}, minimizes the
 total weighted assignment of all work orders subtracted by the penalty $
 \ParStrategicResourcePenalty$ for exceeding the resource capacity given in
-equation \eqref{eqn:strategic:constraint:resource}. The third term of the
+equation~\eqref{eqn:strategic:constraint:resource}. The third term of the
 objective function handles the $\ParClusteringValue$ which turns the model into
 a quadratic problem. This term optimizes the value of scheduling two work orders
 in the same period, if they have share similarity like close proximity, same
-piece/type of equipment, etc. Equation \eqref{eqn:strategic:constraint:resource}
+piece/type of equipment, etc. Equation~\eqref{eqn:strategic:constraint:resource}
 ensures that all the $\ParOperationWork{wr}$ for each activity in
 a work order, given that it has been assigned, is lower than the $
 \ParStrategicResource$ for each $\ElementPeriod$ and for each resources $
 \ElementResource$. $\ParStrategicResourcePenalty$ is the amount of exceeded
 capacity that is needed for the current assignment of work orders to be
-feasible. Equation \eqref{eqn:constraint:strategic:schedule_once} makes
-sure that each work order is assigned to at least a one period. Equation
-\eqref{eqn:strategic:constraint:exclude} excludes a work order from a
-certain period and equation \eqref{eqn:constraint:strategic:include}
+feasible. Equation~\eqref{eqn:constraint:strategic:schedule_once} makes
+sure that each work order is assigned to at least a one period. 
+Equation~\eqref{eqn:strategic:constraint:exclude} excludes a work order from a
+certain period and equation~\eqref{eqn:constraint:strategic:include}
 forces a specific work order to be included in a specific
-period. Constraint \eqref{eqn:variable:strategic:assignment} and
-\eqref{eqn:variable:strateigc:penalty} specify the variable domain for $
+period. Constraint~\eqref{eqn:variable:strategic:assignment} 
+and~\eqref{eqn:variable:strateigc:penalty} specify the variable domain for $
 \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}$ and
 $ \ParStrategicResourcePenalty$ respectively. The effects of changing $
 \ParStrategicInclude$, $\ParStrategicExclude$, $\ParStrategicResource$,
 and $ \ParStrategicUrgency$ in real-time will be examined in the results
-section~\ref{sec:3-results} to determine their effects on the weekly schedules
+Section~\ref{sec:3-results} to determine their effects on the weekly schedules
 and the objective value.
