--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -6,26 +6,26 @@ forcing work orders into specific weekly  $\ElementPeriod \in \SetPeriod$
 schedules is presented in Section~\ref{sec:response_work_orders}  and excluding
 work orders from periods is presented in Section~\ref{sec:exclusion}. The
 effects of reducing the period resource capacities $\ParStrategicResource$ is
-tested in section~\ref{sec:results:reduced_weekly_capacity} and increasing $
+tested in Section~\ref{sec:results:reduced_weekly_capacity} and increasing $
 \ElementResource$ is tested in  Section~\ref{sec:increase_week_cap}.  Finally
 the effect of changing the work order values $\ParStrategicUrgency$,  is tested
-in section~\ref{sec:results:strategic_value_changes}.
+in Section~\ref{sec:results:strategic_value_changes}.
 
 \subsection{Data Instance}\label{sec:data_instance}
-This data instance is provided by Total Energies~\cite{total-energies}. The data
+This data instance is provided by Total Energies~\citep{total-energies}. The data
 is extracted from their SAP ERP system.  The data instance used in this paper
 is from a specific offshore platform that for  the 2 year time horizon contains
 3487 outstanding work orders ($\SetWorkOrder{}$), have 16 different resource
-skill sets ($\SetResource$) (e.g. mechanics, electricians,  turbine specialists,
+skill sets ($\SetResource$) (e.g.\ mechanics, electricians,  turbine specialists,
 etc.), and finally the scheduling horizon stretches over a 52 bi-weekly periods
 ($\SetPeriod$) meaning approximately 2 years.
  
 \begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-           & \begin{tabular}[c]{@{}c@{}}$|\SetWorkOrder{}|$\end{tabular}   & \begin{tabular}[c]{@{}c@{}}$|\SetResource|$\end{tabular}         & \begin{tabular}[c]{@{}c@{}}$|\SetPeriod|$\end{tabular} \\ \hline
-Instance 1 & 3487                                                          & 16                                                               & 52                                                            \\ \hline
+\begin{tabular}{ccccc}
+\toprule
+           & $|\SetWorkOrder{}|$ & $|\SetResource|$ & $|\SetPeriod|$ \\ \midrule
+Instance 1 & 3487                & 16               & 52             \\ \bottomrule
 \end{tabular}
 
 \caption{specific data instances from the case company. Here $\SetWorkOrder$ is the set of work orders, $\SetResource$ is the set of resources, and $\SetPeriod$ is the set of weekly periods.} % \label{fig1}
@@ -42,20 +42,20 @@ subject to while it is running for different timepoints $\VarMetaTime$.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	\begin{tabular}[c]{@{}c@{}}\end{tabular}                                & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}} $\VarMetaTime_2 = 120$ \end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \hline
-	\begin{tabular}[c]{@{}c@{}}$\Delta |\ParStrategicInclude|$\end{tabular} & 50                                                            & 50                                                               & 50                                                             & 50                                                             & 50                                                       \\ \hline
+	\begin{tabular}{cccccc}
+	\toprule
+	                                & $\VarMetaTime_1 = 60$ & $\VarMetaTime_2 = 120$ & $\VarMetaTime_3 = 180$ & $\VarMetaTime_4 = 240$ & $\VarMetaTime_5 = 300$ \\ \midrule
+	$\Delta |\ParStrategicInclude|$ & 50                    & 50                     & 50                     & 50                     & 50                     \\ \bottomrule
 	\end{tabular}
 	\caption{The including work orders perturbations that the AbLNS will be affected by. 
-	Perturbations occur at 60 second time intervals affecting 50 randomly chosen work orders included into random periods.}
-	\label{tab:responses:inclusion}
+		Perturbations occur at 60 second time intervals affecting 50 randomly chosen work orders included into random periods.
+	}\label{tab:responses:inclusion}
 \end{table}
 
 Figure~\ref{fig:responses:inclusion} shows the effects of changing the $
 \ParStrategicInclude$ parameter in real-time. The model quickly converges
-and when the system is pertubed by an input response the objective value
-\ref{eqn:objective:strategic} shows a small spike and then quickly converges to
+and when the system is pertubed by an input response the objective 
+value~\ref{eqn:objective:strategic} shows a small spike and then quickly converges to
 a new solution.
 
 \begin{figure}[H]
@@ -63,8 +63,9 @@ a new solution.
 	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_inclusion_plot.tex}
 	}
-	\caption{Effects of perturbing the solution by forcing work orders into specific periods.}
-	\label{fig:responses:inclusion}
+	\caption{Effects of perturbing the solution by forcing work orders into specific
+		periods.
+	}\label{fig:responses:inclusion}
 \end{figure}
 Figure~\ref{fig:responses:inclusion}  show 5 perturbations with the first
 at time = 60s where the objective value  slightly increases in response to
@@ -91,14 +92,14 @@ of affected work orders is chosen as many exclusions of do not affect the assign
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	\begin{tabular}[c]{@{}c@{}}\end{tabular}                                & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}} $\VarMetaTime_2 = 120$ \end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \hline
-	\begin{tabular}[c]{@{}c@{}}$\Delta |\ParStrategicExclude|$\end{tabular} & 500                                                           & 500                                                              & 500                                                            & 500                                                            & 500                                                       \\ \hline
+	\begin{tabular}{cccccc}
+	\toprule
+	                                & $\VarMetaTime_1 = 60$ & $\VarMetaTime_2 = 120$ & $\VarMetaTime_3 = 180$ & $\VarMetaTime_4 = 240$ & $\VarMetaTime_5 = 300$ \\ \midrule
+	$\Delta |\ParStrategicExclude|$ & 500                   & 500                    & 500                    & 500                    & 500                    \\ \bottomrule
 	\end{tabular}
 	\caption{The exclusion of work orders perturbations from specific periods on the weekly schedule. 
-	Perturbations occur at 60 second time intervals affecting 500 work orders each time.}
-	\label{tab:responses:exclusion}
+		Perturbations occur at 60 second time intervals affecting 500 work orders each time.
+	}\label{tab:responses:exclusion}
 \end{table}
 
 Figure~\ref{fig:responses:exclusion}  show a substantial spike in the objective value  
@@ -111,8 +112,7 @@ after a perturbation as given in table~\ref{tab:responses:exclusion}.
 	}
 	\caption{At each 60 second interval the objective value experiences a 
 	large spike as the exclusion of work orders make the current best
-	assignment of work orders infeasible}
-	\label{fig:responses:exclusion}
+	assignment of work orders infeasible}\label{fig:responses:exclusion}
 \end{figure}
 
 From figure~\ref{fig:responses:inclusion} and figure~\ref{fig:responses:exclusion} it is 
@@ -128,16 +128,16 @@ second intervals are specified instead of 60 second intervals.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	                                  & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 0$\end{tabular}  & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 100$\end{tabular}   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 200$\end{tabular}    & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 300$\end{tabular} \\ \hline
-	$\Delta |\SetPeriod|$             & 52                                                              & 52                                                               & 52                                                                & 52                                                             \\ \hline
-	$\Delta |\SetResource|$           & 16                                                              & 16                                                               & 16                                                                & 16                                                             \\ \hline
-	$ |\ParStrategicResource{}|$ (hours)& 111268                                                          &  61816                                                           & 111268                                                            & 173083                                                          \\ \hline
+	\begin{tabular}{cccccc}
+	\toprule
+	                                    & $\VarMetaTime_1 = 0$ & $\VarMetaTime_1 = 100$ & $\VarMetaTime_2 = 200$ & $\VarMetaTime_3 = 300$ \\ \midrule
+	$\Delta |\SetPeriod|$               & 52                   & 52                     & 52                     & 52                     \\ \midrule
+	$\Delta |\SetResource|$             & 16                   & 16                     & 16                     & 16                     \\ \midrule
+	$ |\ParStrategicResource{}|$ (hours)& 111268               &  61816                 & 111268                 & 173083                 \\ \bottomrule
 	\end{tabular}
 	\caption{The resource perturbations that the AbLNS will be affected by measured in hours. Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
-		affected}
-	\label{tab:responses:resource-addition}
+		affected
+	}\label{tab:responses:resource-addition}
 \end{table}
 
 Figure~\ref{fig:responses:resources-addition} shows the effects of progressively
@@ -154,11 +154,11 @@ final value.
 		\input{figures/strategic_objective_value_resource_addition_plot.tex}
 	}
 	\caption{Starting from a base load of 111268 hours (the same amount of 
-	hours as in the second perturbation). The resources are first reduced
-	causing a spike in the objective value. Then at each 100 second interval
-	resources are added and the objective value decreases and the AbLNS 
-	optimize around the perturbation}
-	\label{fig:responses:resources-addition}
+		hours as in the second perturbation). The resources are first reduced
+		causing a spike in the objective value. Then at each 100 second interval
+		resources are added and the objective value decreases and the AbLNS 
+		optimize around the perturbation
+	}\label{fig:responses:resources-addition}
 \end{figure}
 
 \subsection{Response to Reduced Weekly Capacity}\label{sec:results:reduced_weekly_capacity}
@@ -167,16 +167,15 @@ AbLNS will affected by. Starting from a base load of the amount of available
 resources are progressively decreased.
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	                                  & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 0$\end{tabular}   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 100$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 200$\end{tabular}    & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 300$\end{tabular} \\ \hline
-	$\Delta |\SetPeriod|$             & 52                                                             & 52                                                             & 52                                                                & 52                                                             \\ \hline
-	$\Delta |\SetResource|$           & 16                                                             & 16                                                             & 16                                                                & 16                                                             \\ \hline
-	$ |\ParStrategicResource{}|$ (hours)& 111268                                                        & 173083                                                         & 111268                                                            & 61816                                                           \\ \hline
+	\begin{tabular}{cccccc}
+	\toprule
+	                                    & $\VarMetaTime_1 = 0$ & $\VarMetaTime_1 = 100$ & $\VarMetaTime_2 = 200$ & $\VarMetaTime_3 = 300$ \\ \midrule
+	$\Delta |\SetPeriod|$               & 52                   & 52                     & 52                     & 52                     \\ \midrule
+	$\Delta |\SetResource|$             & 16                   & 16                     & 16                     & 16                     \\ \midrule
+	$ |\ParStrategicResource{}|$ (hours)& 111268               & 173083                 & 111268                 & 61816                  \\ \bottomrule
 	\end{tabular}
 	\caption{The resource perturbations that the AbLNS will be affected by measured in hours. Here all $\ElementPeriod \in \SetPeriod$ and $\ElementResource \in \SetResource$ are 
-		affected}
-	\label{tab:resources:resource-subtraction}
+		affected}\label{tab:resources:resource-subtraction}
 \end{table}
 
 Figure~\ref{fig:responses:resource-subtraction} shows the effects of perturbing
@@ -193,8 +192,8 @@ capacity.
 	100 seconds the objective value decreases in response to the perturbation
 	as resources are added, after which the AbLNS is pertubed by two decreases
 	in resources causing an initial spike in the objective value followed 
-	by the AbLNS optimizing around the perturbation}
-	\label{fig:responses:resource-subtraction}
+	by the AbLNS optimizing around the perturbation
+	}\label{fig:responses:resource-subtraction}
 \end{figure}
 
 \subsection{Response to Changes in Work Order Values}\label{sec:results:strategic_value_changes}
@@ -206,15 +205,15 @@ table~\ref{tab:responses:value_change}.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-	                                                                                                                   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 120$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \hline
-	$\Delta |\SetWorkOrder[\VarMetaTime_{n}]{} \triangle \SetWorkOrder[\VarMetaTime_{n-1}]{}              |$           & 100                                                           & 100                                                            & 100                                                            & 100                                                            & 100                                                      \\ \hline
-	$\Delta |\SetPeriod[\VarMetaTime_{n}]{} \triangle \SetPeriod[\VarMetaTime_{n-1}]{}                    |$           & 52                                                            & 52                                                             & 52                                                             & 52                                                             & 52                                                       \\ \hline
-	\makecell{$ \ParStrategicUrgency[\VarMetaTime_{n}] -$\\ $\ParStrategicUrgency[\VarMetaTime_{n - 1}]$}        & $3.75 \cdot 10^{7}$                                           & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                       \\ \hline
+	\begin{tabular}{cccccc}
+	\toprule
+	                                                                                                                   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 120$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \midrule
+	$\Delta |\SetWorkOrder[\VarMetaTime_{n}]{} \triangle \SetWorkOrder[\VarMetaTime_{n-1}]{}              |$           & 100                                                           & 100                                                            & 100                                                            & 100                                                            & 100                                                      \\ \midrule
+	$\Delta |\SetPeriod[\VarMetaTime_{n}]{} \triangle \SetPeriod[\VarMetaTime_{n-1}]{}                    |$           & 52                                                            & 52                                                             & 52                                                             & 52                                                             & 52                                                       \\ \midrule
+	\makecell{$ \ParStrategicUrgency[\VarMetaTime_{n}] -$\\ $\ParStrategicUrgency[\VarMetaTime_{n - 1}]$}        & $3.75 \cdot 10^{7}$                                           & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                       \\ \bottomrule
 	\end{tabular}
-	\caption{Perturbations that the $\ParStrategicUrgency$ will be affected by.}
-	\label{tab:responses:value_change}
+	\caption{Perturbations that the $\ParStrategicUrgency$ will be affected by
+	}\label{tab:responses:value_change}
 \end{table}
 
 Figure~\ref{fig:responses:value_change} shows the effects of
@@ -231,7 +230,7 @@ work order to a specific period.
 	\caption{The effects of perturbing the AbLNS by dynamically changing the
 	$\ParStrategicUrgency$ in the objective function. The objective value
 	is increasing in response to the higher cost associated with a late
-	scheduling, after which it optimizes around the perturbation}
-	\label{fig:responses:value_change}
+	scheduling, after which it optimizes around the perturbation
+	}\label{fig:responses:value_change}
 \end{figure}
  
