--- a/tex/algorithms/actor-based-large-neighborhood-search.tex
+++ b/tex/algorithms/actor-based-large-neighborhood-search.tex
@@ -6,33 +6,30 @@
 \begin{algorithm}[H]
 \caption{Actor-based Large Neighborhood Search} 
 \begin{algorithmic}[1]
-\State \textbf{Input} $\MessageQueue$    = message queue
-\State \textbf{Input} $\ProblemInstance$ = problem instance
-\State \textbf{Input} $\Solution$        = initial schedule
-\State \textbf{Input} $\SharedSolution$  = shared solution
+\State\textbf{Input} $\MessageQueue$    = message queue
+\State\textbf{Input} $\ProblemInstance$ = problem instance
+\State\textbf{Input} $\Solution$        = initial schedule
+\State\textbf{Input} $\SharedSolution$  = shared solution
 % \State $\Solution^b = \Solution$
-\Repeat \label{alg:actor-based-large-neighborhood-search:main-optimization-loop}
-	\State $\Solution^t = \Solution$ \label{alg:actor-based-large-neighborhood-search:clone-solution}
-	\While{$\MessageQueue.has\_message()$} \label{alg:actor-based-large-neighborhood-search:message-loop}
+\Repeat\
+	\State$\Solution^t = \Solution$
+	\While{$\MessageQueue.has\_message()$}\label{alg:actor-based-large-neighborhood-search:message-loop}
         % \State $m = queue.pop()$
         % \State $m.destruct(\Solution^b)$
-		\State $\ProblemInstance.update(\SharedSolution, m_n(\VarMetaTime))$
-        \State $\Solution^t.destruct(\SharedSolution, m_n(\VarMetaTime))$
-    \EndWhile
-	
-    \State $\Solution^t.repair(\SharedSolution)$ \label{alg:actor-based-large-neighborhood-search:repair}
+		\State$\ProblemInstance.update(\SharedSolution, m_n(\VarMetaTime))$
+        \State$\Solution^t.destruct(\SharedSolution, m_n(\VarMetaTime))$
+    \EndWhile\
+    \State$\Solution^t.repair(\SharedSolution)$\label{alg:actor-based-large-neighborhood-search:repair}
 
-    \If{accept($\Solution^t, \Solution$)} \label{alg:actor-based-large-neighborhood-search:accept}                       
-        \State $\Solution.update(\Solution^t)$
-    \EndIf                                         
-
-    \If{$c(\Solution^t) < c(\Solution)$} \label{alg:actor-based-large-neighborhood-search:better-solution}                             
-        \State $\Solution.update(\Solution^t)$
-		\State $\SharedSolution.atomic\_pointer\_swap(\Solution)$ \label{alg:actor-based-large-neighborhood-search:atomic-pointer-swap}
-    \EndIf                                           
-	\State $\MessageQueue.push(m_5(\VarMetaTime))$ \label{alg:actor-based-large-neighborhood-search:schedule-message}
-\Until
-\end{algorithmic}
-\label{alg:actor-based-large-neighborhood-search}
+    \If{accept ($\Solution^t, \Solution$)}
+        \State$\Solution.update(\Solution^t)$
+    \EndIf\                                        
+    \If{$c(\Solution^t) < c(\Solution)$}\label{alg:actor-based-large-neighborhood-search:better-solution}                             
+        \State$\Solution.update(\Solution^t)$
+		\State$\SharedSolution.atomic\_pointer\_swap(\Solution)$\label{alg:actor-based-large-neighborhood-search:atomic-pointer-swap}
+    \EndIf\                                    
+	\State$\MessageQueue.push(m_5(\VarMetaTime))$
+\Until\
+\end{algorithmic}\label{alg:actor-based-large-neighborhood-search}
 \end{algorithm}
 
