--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -63,7 +63,7 @@ scheduling process. As the process requires multiple different actors we need a 
 
 To effectively model a system that contains multiple actors also 
 The system will be described in accordance 
-with the \ref{top-level-schedule-overview.png} \cite{palmer_maintenance_2019}.
+with the \ref{top-level-schedule-overview.png}\citep{palmer_maintenance_2019}.
 
 The maintenance scheduling problem is NP-hard and real-time optimal solutions will never be a feasible approach unless we use a multi-model setup where each model enriches the 
 overall solution in the way that it is most capable of. 
